--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         float: right;
       }
       .project .logo img {
-        max-height: 50px;
+        height: 50px;
       }
       a {
         color: #03a9f4;
@@ -161,6 +161,22 @@
         </p>
         <p>
           <a href="https://install.wled.me" target="_blank"
+            >Installation Website</a
+          >
+        </p>
+      </div>
+      <div class="project">
+        <a href="https://tasmota.github.io" class="logo"
+          ><img src="static/logos/tasmota.svg" alt="Tasmota logo"
+        /></a>
+        <h3>Tasmota</h3>
+        <p>
+          Alternative firmware for ESP8266 with easy configuration using webUI,
+          OTA updates, automation using timers or rules, expandability and
+          entirely local control over MQTT, HTTP, Serial or KNX.
+        </p>
+        <p>
+          <a href="https://arendst.github.io/Tasmota-firmware/" target="_blank"
             >Installation Website</a
           >
         </p>
