--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         // In development we import locally.
         window.location.hostname === "localhost"
           ? "/dist/web/install-button.js"
-          : "https://unpkg.com/esp-web-tools@3.4.2/dist/web/install-button.js?module"
+          : "https://unpkg.com/esp-web-tools@3.5.0/dist/web/install-button.js?module"
       );
     </script>
   </head>
@@ -209,7 +209,7 @@
       <pre>
 &lt;script
   type="module"
-  src="https://unpkg.com/esp-web-tools@3.4.2/dist/web/install-button.js?module"
+  src="https://unpkg.com/esp-web-tools@3.5.0/dist/web/install-button.js?module"
 >&lt;/script>
 
 &lt;esp-web-install-button
@@ -242,7 +242,8 @@
       <p>
         ESP Web Tools manifest describe the firmware that you want to install.
         It allows specifying different builds for the different types of ESP
-        devices. Current supported devices are ESP8266, ESP32 and ESP32-S2. The
+        devices. Current supported chip families are <code>ESP8266</code>,
+        <code>ESP32</code>, <code>ESP32-C3</code> and <code>ESP32-S2</code>. The
         correct build will be automatically selected based on the type of the
         ESP device we detect via the serial port.
       </p>
