--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         // In development we import locally.
         window.location.hostname === "localhost"
           ? "/dist/web/install-button.js"
-          : "https://unpkg.com/esp-web-tools@3.6.0/dist/web/install-button.js?module"
+          : "https://unpkg.com/esp-web-tools@4.0.0/dist/web/install-button.js?module"
       );
     </script>
   </head>
@@ -146,7 +146,7 @@
         detect the type of the connected ESP device and find the right firmware
         files in the manifest.
       </p>
-      <!-- <div class="videoWrapper">
+      <div class="videoWrapper">
         <iframe
           width="560"
           height="315"
@@ -156,7 +156,7 @@
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
         ></iframe>
-      </div> -->
+      </div>
       <h2 id="used-by">Projects using ESP Web Tools</h2>
       <div class="project">
         <a href="https://wled.me" class="logo"
@@ -218,7 +218,7 @@
       <pre>
 &lt;script
   type="module"
-  src="https://unpkg.com/esp-web-tools@3.6.0/dist/web/install-button.js?module"
+  src="https://unpkg.com/esp-web-tools@4.0.0/dist/web/install-button.js?module"
 >&lt;/script>
 
 &lt;esp-web-install-button
@@ -252,7 +252,7 @@
         ESP Web Tools manifest describe the firmware that you want to install.
         It allows specifying different builds for the different types of ESP
         devices. Current supported chip families are <code>ESP8266</code>,
-        <code>ESP32</code>, <code>ESP32-C3</code> and <code>ESP32-S2</code>. The
+        <code>ESP32</code>, <code>ESP32C3</code> and <code>ESP32S2</code>. The
         correct build will be automatically selected based on the type of the
         ESP device we detect via the serial port.
       </p>
