Allow skipping erasing on new installations (#102)

--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
   "name": "ESPHome",
   "version": "2021.11.0",
   "home_assistant_domain": "esphome",
+  "new_install_skip_erase": false,
   "builds": [
     {
       "chipFamily": "ESP32",
@@ -296,6 +297,14 @@
         If your firmware is supported by Home Assistant, you can add the
         optional key <code>home_assistant_domain</code>. If present, ESP Web
         Tools will link the user to add this device to Home Assistant.
+      </p>
+      <p>
+        By default a new installation will erase the entire flash. If you want
+        to skip this step, set the optional key
+        <code>new_install_skip_erase</code> to <code>true</code>. ESP Web Tools
+        considers it a new installation if it is unable to detect the current
+        firmware of the device (via Improv Serial) or if the detected firmware
+        does not match the name specififed in the manifest.
       </p>
       <h3 id="improv">Wi-Fi provisioning</h3>
       <p>
