added CanAirIO project to Products section

--- a/index.html
+++ b/index.html
@@ -212,6 +212,19 @@
           <a href="https://esphome.io" target="_blank">Website</a>
         </p>
       </div>
+      <div class="project">
+        <a href="https://canair.io" class="logo" 
+          ><img src="static/logos/canairio.png" alt="CanAirIO logo"
+        /></a>
+        <h3>CanAirIO</h3>
+        <p>
+          Citizen science initiative for monitoring air quality. CanAirIO uses 
+          mobile and fixed sensors to measure air quality with smartphones and ESP32 devices.
+        </p>
+        <p>
+          <a href="https://canair.io/installer.html" target="_blank">Website</a>
+        </p>
+      </div>
       <h2 id="add-website">Adding ESP Web Tools to your website</h2>
       <p>
         To add this to your own website, create a manifest and add the button to
