--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
           mobile and fixed sensors to measure air quality with smartphones and ESP32 devices.
         </p>
         <p>
-          <a href="https://canair.io/installer.html" target="_blank">Website</a>
+          <a href="https://canair.io/installer.html" target="_blank">Installation Website</a>
         </p>
       </div>
       <h2 id="add-website">Adding ESP Web Tools to your website</h2>
