--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         // In development we import locally.
         window.location.hostname === "localhost"
           ? "/dist/web/install-button.js"
-          : "https://unpkg.com/esp-web-tools@5.0.0/dist/web/install-button.js?module"
+          : "https://unpkg.com/esp-web-tools@5.1.0/dist/web/install-button.js?module"
       );
     </script>
   </head>
@@ -200,16 +200,19 @@
         </p>
       </div>
       <div class="project">
-        <a href="https://canair.io" class="logo" 
+        <a href="https://canair.io" class="logo"
           ><img src="static/logos/canairio.png" alt="CanAirIO logo"
         /></a>
         <h3>CanAirIO</h3>
         <p>
-          Citizen science initiative for monitoring air quality. CanAirIO uses 
-          mobile and fixed sensors to measure air quality with smartphones and ESP32 devices.
+          Citizen science initiative for monitoring air quality. CanAirIO uses
+          mobile and fixed sensors to measure air quality with smartphones and
+          ESP32 devices.
         </p>
         <p>
-          <a href="https://canair.io/installer.html" target="_blank">Installation Website</a>
+          <a href="https://canair.io/installer.html" target="_blank"
+            >Installation Website</a
+          >
         </p>
       </div>
       <div class="project">
@@ -224,7 +227,7 @@
         <p>
           <a href="https://esphome.io" target="_blank">Website</a>
         </p>
-      </div> 
+      </div>
       <h2 id="add-website">Adding ESP Web Tools to your website</h2>
       <p>
         To add this to your own website, create a manifest and add the button to
@@ -241,7 +244,7 @@
       <pre>
 &lt;script
   type="module"
-  src="https://unpkg.com/esp-web-tools@5.0.0/dist/web/install-button.js?module"
+  src="https://unpkg.com/esp-web-tools@5.1.0/dist/web/install-button.js?module"
 >&lt;/script>
 
 &lt;esp-web-install-button
