--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <iframe
           width="560"
           height="315"
-          src="https://www.youtube-nocookie.com/embed/k88BS8zgWq0"
+          src="https://www.youtube-nocookie.com/embed/E8bdATqXM8c"
           title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
