Fix screenshot path

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
       <p class="screenshot">
         <img
-          src="/static/screenshot-dialog.png"
+          src="./static/screenshot-dialog.png"
           alt="Screenshot showing ESP Web Tools dialog offering visting the device, adding it to Home Assistant, change Wi-Fi, show logs and console and reset data."
         />
         <i>Screenshot showing the ESP Web Tools interface</i>
