--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
         firmware of the device (via Improv Serial) or if the detected firmware
         does not match the name specififed in the manifest.
       </p>
-      <h2 id="improv">Wi-Fi provisioning</h2>
+      <h2 id="improv">Configuring Wi-Fi</h2>
       <p>
         ESP Web Tools supports the
         <a href="https://www.improv-wifi.com/serial"
@@ -375,10 +375,11 @@
         port.
       </p>
       <p>
-        If the firmware supports Improv, a user will be guided to connect the
-        device to the network after installation. Once connected, the device can
-        sent a URL to the user to finish configuration. This can for example be
-        a link to the device's IP address where it serves a local UI.
+        If the firmware supports Improv, a user will be asked to connect the
+        device to the network after installing the firmware. Once connected, the
+        device can send the user to a URL to finish configuration. For example,
+        this can be a link to the device's IP address where it serves a local
+        UI.
       </p>
       <p>
         At any time in the future a user can use ESP Web Tools to find the
