--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         text-align: center;
       }
       .screenshot img {
+        max-width: 100%;
         box-shadow: rgb(0 0 0 / 20%) 0px 2px 1px -1px,
           rgb(0 0 0 / 14%) 0px 1px 1px 0px, rgb(0 0 0 / 12%) 0px 1px 3px 0px;
         border-radius: 4px;
