Add `color-scheme` meta

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       name="twitter:image"
       content="https://esphome.github.io/esp-web-tools/static/social.png"
     />
+    <meta name="color-scheme" content="dark light">
     <style>
       body {
         font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI",
