--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       name="twitter:image"
       content="https://esphome.github.io/esp-web-tools/static/social.png"
     />
-    <meta name="color-scheme" content="dark light">
+    <meta name="color-scheme" content="dark light" />
     <style>
       body {
         font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI",
@@ -128,7 +128,7 @@
         // In development we import locally.
         window.location.hostname === "localhost"
           ? "/dist/web/install-button.js"
-          : "https://unpkg.com/esp-web-tools@5.1.0/dist/web/install-button.js?module"
+          : "https://unpkg.com/esp-web-tools@5.2.0/dist/web/install-button.js?module"
       );
     </script>
   </head>
@@ -281,7 +281,7 @@
       <pre>
 &lt;script
   type="module"
-  src="https://unpkg.com/esp-web-tools@5.1.0/dist/web/install-button.js?module"
+  src="https://unpkg.com/esp-web-tools@5.2.0/dist/web/install-button.js?module"
 >&lt;/script></pre
       >
       <p>
