Add video why we created ESP Web Tools

--- a/index.html
+++ b/index.html
@@ -472,6 +472,16 @@
           >
         </li>
       </ul>
+
+      <h2>Why we created ESP Web Tools</h2>
+      <div class="videoWrapper">
+        <lite-youtube
+          videoid="6ZMXE5PXPqU"
+          videotitle="Why we created ESP Web Tools"
+          videoStartAt="1255"
+        ></lite-youtube>
+      </div>
+
       <div class="footer">
         <div>
           ESP Web Tools –
