--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
         Manifests describe the firmware that you want to offer the user to
         install. It allows specifying different builds for the different types
         of ESP devices. Current supported chip families are
-        <code>ESP8266</code>, <code>ESP32</code>, <code>ESP32C3</code> and
-        <code>ESP32S2</code>. The correct build will be automatically selected
+        <code>ESP8266</code>, <code>ESP32</code>, <code>ESP32-C3</code> and
+        <code>ESP32-S2</code>. The correct build will be automatically selected
         based on the type of the ESP device we detect via the serial port.
       </p>
       <pre>
